--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                 <div class="sign-up">
                     <div class="main-text">This website is awesome</div>
                     <div class="subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
-                    <button>Sign up</button>
+                    <button class="button-1">Sign up</button>
                 </div>
-                <img src="" alt="this is a placeholder for an image">
+                <img src="" alt="this is a placeholder for an image" class="hero-image">
             </div>
         </div>
     </div>
