--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="main">Call to action! It's time!</div>
             <div class="sub">Sign up for our product by clicking that button right over there!</div>
         </div>
-        <button>Sign up</button>
+        <button class="button-2">Sign up</button>
     </div>
     <div class="footer">
         Copyright &copy; The Odin Project 2021
