--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </div>
     <div class="quote">
         <div class="testimonial">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
-        <div class="quoted">-Thor, God of Thunder</div>
+        <div class="quoted"><strong>-Thor, God of Thunder</strong></div>
     </div>
     <div class="action">
         <div class="statement">
